# Hero-s-hunt

./: .gitignore  CMakeLists.txt  README.md  game5.sln
game5/: characters.cpp  characters.h  chooseRoom.cpp  chooseRoom.h  common.h  game5.vcxproj  game5.vcxproj.filters  info.h  main.cpp  rooms.cpp  rooms.h  save1  save2  save3
game5/include/: abilities.cpp  audio.cpp  audio.h  characters.cpp  characters.h  chooseRoom.cpp  chooseRoom.h  common.h  info.cpp  info.h  items.cpp  items.h  npcs.cpp  pcs.cpp  rooms.cpp  rooms.h
game5/saves/: info  save1  save2
game5/src/: common.h  pages.h
game5/src/characters/: abilities.h  enemies.h  heroes.h  items.h
game5/src/characters/abilities/: Ability.cpp  Ability.h  ar_abilities.h  pal_abilities.h  sw_abilities.h
game5/src/characters/abilities/Archer/: ArAb1.cpp  ArAb1.h  ArAb2.cpp  ArAb2.h  ArAb3.cpp  ArAb3.h
game5/src/characters/abilities/Paladin/: PalAb1.cpp  PalAb1.h  PalAb2.cpp  PalAb2.h  PalAb3.cpp  PalAb3.h
game5/src/characters/abilities/Swordsman/: SwAb1.cpp  SwAb1.h  SwAb2.cpp  SwAb2.h  SwAb3.cpp  SwAb3.h
game5/src/characters/enemies/: Enemy.cpp  Enemy.h  Rogue.cpp  Rogue.h  Zombie.cpp  Zombie.h
game5/src/characters/heroes/: Archer.cpp  Archer.h  Hero.cpp  Hero.h  Paladin.cpp  Paladin.h  Swordsman.cpp  Swordsman.h
game5/src/characters/items/: Block.cpp  Block.h  DmgPotion.cpp  DmgPotion.h  Healing.cpp  Healing.h  Item.cpp  Item.h  UpMaxHP.cpp  UpMaxHP.h
game5/src/pages/: ChooseSave.cpp  ChooseSave.h  Credits.cpp  Credits.h  Gameplay.cpp  Gameplay.h  MainMenu.cpp  MainMenu.h  Page.cpp  Page.h  Settings.cpp  Settings.h
game5/src/pages/GameplayEvents/: Battle.cpp  Battle.h  ChooseStart.cpp  ChooseStart.h  DeadScreen.cpp  DeadScreen.h  GameplayEvent.cpp  GameplayEvent.h  Rest.cpp  Rest.h  Reward.cpp  Reward.h  Shop.cpp  Shop.h  Transition.cpp  Transition.h  gameplay_events.h
game5/src/utils/: Audio.cpp  Audio.h  Button.cpp  Button.h  RadioButton.cpp  RadioButton.h  Save.cpp  Save.h  TextFrame.cpp  TextFrame.h
smth_related/: Rogue.xcf  Zombie.xcf  plans.txt
